[project]
name = "ai-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.23",
    "langchain-google-genai>=2.1.3",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.31",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.11.3",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
]
